fixed overflow on the page, and added some responsiveness :dog2::dog2:

--- a/styles/sass/_generalStyles.scss
+++ b/styles/sass/_generalStyles.scss
@@ -12,8 +12,22 @@ h1 {
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 a {
     text-decoration: none;
+}
+
+img {
+    // responsive image styles
+    max-width: 100%;
+    height: auto;
+}
+
+.wrapper {
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
 }
