--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -17,11 +17,9 @@ header {
     height: auto;
     position: absolute;
     top: 0px;
-    left: 0px;
 }
 
 .dog-finder-selection-flex {
-    min-width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
